--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-.pdf
+
+# Created by https://www.gitignore.io/api/elisp
+
+### Elisp ###
+# Compiled
+*.elc
+
+# Packaging
+.cask
+
+# Backup files
+*~
+
+# Undo-tree save-files
+*.~undo-tree
+
+
+*.pdf
